Terminando projeto e comunicação da API com o site